syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

import "DistLedgerCommonDefinitions.proto";

// Administrator Interface of the DistLedger Service

message RegisterRequest {
  string service = 1;
  string qualifier = 2;
  string host = 3;
}

message RegisterResponse {
  int32 server_id = 1;
}

message LookupRequest {
  string service = 1;
  string qualifier = 2;
}

message LookupResponse {
  repeated string hosts = 1;
}

message DeleteRequest {
  string service = 1;
  string host = 2;
}

message MaxServersRequest {
  string service = 1;
}

message MaxServersResponse {
  int32 maxServers = 1;
}

message DeleteResponse {}


service NamingServerService {
  rpc registerServer(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc deleteServer(DeleteRequest) returns (DeleteResponse);
  rpc maxServers(MaxServersRequest) returns (MaxServersResponse);
}
